# nisargrimpworkflow

./: CLAUDE.md  README.md  processTrack.py  pyproject.toml  setupTracks.py
Documents/: FileNISARProducts.md  ROFFtoGrimp.md  RUNWtoGrimp.md  SetupNISAR.md  buildFrameGpkg.md  buildFrameLayers.md  checkFrameInputs.md  estimateIonosphere.md  makeMaster.md  processTrack.md  setupNISARTracks.md  setupTracks.md  workflow_overview.md
nisargrimpworkflow/: FileNISARProducts.py  ROFFtoGrimp.py  RUNWtoGrimp.py  SetupNISAR.py  __init__.py  ambiguityAnalysis.py  buildFrameGpkg.py  buildFrameLayers.py  checkFrameInputs.py  custom_buildvrtWithOffsets.py  estimateIonosphere.py  makeMaster.py  processFrameIonosphere.py  processTrack.py  setupNISARTracks.py  setupTracks.py  wrapH5WithVRT.py
